Use lunarized colorscheme

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -3,6 +3,7 @@
     html body {
         font-family: '{{ .Site.Params.font }}', sans-serif;
         background-color: {{ .Site.Params.backgroundColor | default "white" }};
+        color: #969696
     }
 
     :root {
