--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,7 +33,7 @@
 
     <body>
         {{ partial "body-open" . }}
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-dark"  style="background-color: #262626; color: #969696">
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand visible-xs" href="#">{{ .Title }}</a>
